--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/loginView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/loginView.fxml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXPasswordField?>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.LoginController">
-   <TextField fx:id="usernameField" layoutX="215.0" layoutY="129.0" promptText="Username" />
-   <PasswordField fx:id="passwordField" layoutX="215.0" layoutY="188.0" promptText="Password" />
-   <Button fx:id="submitButton" layoutX="269.0" layoutY="244.0" mnemonicParsing="false" onAction="#loginEvent" text="Invio" />
-   <Label fx:id="loginTitleLabel" layoutX="260.0" layoutY="61.0" text="Login">
+   <Label fx:id="loginTitleLabel" layoutX="260.0" layoutY="61.0" style="-fx-text-fill: rgb(28, 56, 121);" text="Login">
       <font>
          <Font size="25.0" />
       </font>
    </Label>
-   <Label fx:id="errorLabel" layoutX="215.0" layoutY="303.0" text="Credenziali non corrette" textFill="#cd2424" visible="false" />
+   <Label fx:id="errorLabel" layoutX="212.0" layoutY="303.0" prefHeight="24.0" prefWidth="170.0" text="Credenziali non corrette" textAlignment="CENTER" textFill="#cd2424" visible="false" wrapText="true" />
+   <MFXTextField fx:id="usernameField" floatingText="Username" layoutX="215.0" layoutY="118.0" prefHeight="50.0" prefWidth="170.0" />
+   <MFXPasswordField fx:id="passwordField" floatingText="Password" layoutX="215.0" layoutY="190.0" prefHeight="50.0" prefWidth="170.0" />
+   <MFXButton fx:id="submitButton" layoutX="270.0" layoutY="261.0" onAction="#loginEvent" rippleAnimateShadow="true" text="Invio" textAlignment="CENTER" />
 </Pane>
