--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/menuView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/menuView.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.MenuController">
    <children>
-      <Button fx:id="inserisciLavoratoreButton" layoutX="73.0" layoutY="138.0" mnemonicParsing="false" prefHeight="124.0" prefWidth="119.0" text="Inserisci lavoratore" textAlignment="CENTER" wrapText="true" />
-      <Button fx:id="modificaLavoratoreButton" layoutX="241.0" layoutY="138.0" mnemonicParsing="false" prefHeight="124.0" prefWidth="119.0" text="Modifica lavoratore" textAlignment="CENTER" wrapText="true" />
-      <Button fx:id="effettuaRicercaButton" layoutX="404.0" layoutY="138.0" mnemonicParsing="false" prefHeight="124.0" prefWidth="119.0" text="Effettua ricerca" textAlignment="CENTER" wrapText="true" />
-      <Button fx:id="esciButton" layoutX="42.0" layoutY="25.0" mnemonicParsing="false" onAction="#exitEvent" text="Esci" />
+      <MFXButton fx:id="esciButton" layoutX="32.0" layoutY="25.0" onAction="#exitEvent" text="Esci" />
+      <MFXButton fx:id="inserisciLavoratoreButton" layoutX="73.0" layoutY="138.0" prefHeight="124.0" prefWidth="119.0" text="Inserisci lavoratore" textAlignment="CENTER" wrapText="true" />
+      <MFXButton fx:id="modificaLavoratoreButton" layoutX="241.0" layoutY="138.0" prefHeight="124.0" prefWidth="119.0" text="Modifica lavoratore" textAlignment="CENTER" wrapText="true" />
+      <MFXButton fx:id="effettuaRicercaButton" layoutX="403.0" layoutY="138.0" prefHeight="124.0" prefWidth="119.0" text="Effettua ricerca" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
