--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/menuView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/menuView.fxml
@@ -3,11 +3,11 @@
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.MenuController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.MenuController">
    <children>
-      <MFXButton fx:id="esciButton" layoutX="32.0" layoutY="25.0" onAction="#exitEvent" text="Esci" />
-      <MFXButton fx:id="inserisciLavoratoreButton" layoutX="73.0" layoutY="138.0" onAction="#goToInserisciLavoratore" prefHeight="124.0" prefWidth="119.0" text="Inserisci lavoratore" textAlignment="CENTER" wrapText="true" />
-      <MFXButton fx:id="modificaLavoratoreButton" layoutX="241.0" layoutY="138.0" prefHeight="124.0" prefWidth="119.0" text="Modifica lavoratore" textAlignment="CENTER" wrapText="true" />
-      <MFXButton fx:id="effettuaRicercaButton" layoutX="403.0" layoutY="138.0" prefHeight="124.0" prefWidth="119.0" text="Effettua ricerca" textAlignment="CENTER" wrapText="true" />
+      <MFXButton fx:id="esciButton" layoutX="31.0" layoutY="24.0" onAction="#exitEvent" prefHeight="49.0" prefWidth="71.0" text="Esci" />
+      <MFXButton fx:id="inserisciLavoratoreButton" layoutX="187.0" layoutY="264.0" onAction="#goToInserisciLavoratore" prefHeight="192.0" prefWidth="191.0" text="Inserisci lavoratore" textAlignment="CENTER" wrapText="true" />
+      <MFXButton fx:id="modificaLavoratoreButton" layoutX="545.0" layoutY="264.0" prefHeight="192.0" prefWidth="191.0" text="Modifica lavoratore" textAlignment="CENTER" wrapText="true" />
+      <MFXButton fx:id="effettuaRicercaButton" layoutX="896.0" layoutY="264.0" prefHeight="192.0" prefWidth="191.0" text="Effettua ricerca" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
