--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
@@ -8,13 +8,12 @@
 <?import io.github.palexdev.materialfx.controls.MFXListView?>
 <?import io.github.palexdev.materialfx.controls.MFXScrollPane?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
-<?import io.github.palexdev.materialfx.controls.MFXToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<MFXScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.InserisciLavoratoriController">
+<MFXScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1158.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.InserisciLavoratoriController">
    <content>
-      <AnchorPane prefHeight="856.0" prefWidth="1266.0">
+      <AnchorPane prefHeight="1145.0" prefWidth="1266.0">
          <children>
             <Text fx:id="anagraficaTitle" layoutX="259.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Anagrafica" />
             <MFXCheckListView fx:id="nazionalitaLavoratore" layoutX="312.0" layoutY="96.0" prefHeight="252.0" prefWidth="143.0" />
@@ -32,15 +31,31 @@
             <MFXCheckListView fx:id="lingueParlate" layoutX="800.0" layoutY="96.0" prefHeight="252.0" prefWidth="143.0" />
             <MFXCheckListView fx:id="patentiPossedute" layoutX="963.0" layoutY="96.0" prefHeight="252.0" prefWidth="143.0" />
             <Text fx:id="automunitoTitle" layoutX="1151.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Automunito" />
-            <MFXButton fx:id="inviaLavoratoreButton" layoutX="972.0" layoutY="532.0" onAction="#inviaLavoratore" text="Invia" />
-            <Text layoutX="245.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contatti urgenti" />
+            <MFXButton fx:id="inviaLavoratoreButton" layoutX="917.0" layoutY="914.0" onAction="#inviaLavoratore" text="Invia" />
+            <Text layoutX="326.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contatti urgenti" />
             <MFXTextField fx:id="nomeContattoUrgente" floatMode="BORDER" floatingText="Nome" layoutX="125.0" layoutY="428.0" prefHeight="52.0" prefWidth="143.0" />
             <MFXTextField fx:id="cognomeContattoUrgente" floatMode="BORDER" floatingText="Cognome" layoutX="125.0" layoutY="490.0" prefHeight="52.0" prefWidth="143.0" />
             <MFXTextField fx:id="telefonoContattoUrgente" floatMode="BORDER" floatingText="Telefono" layoutX="125.0" layoutY="554.0" prefHeight="52.0" prefWidth="143.0" />
-            <MFXTextField fx:id="emailContattoUrgente" floatMode="BORDER" floatingText="E-mail" layoutX="125.0" layoutY="628.0" prefHeight="52.0" prefWidth="143.0" />
-            <MFXButton fx:id="contattoUrgenteButton" layoutX="494.0" layoutY="529.0" onAction="#onClickUrgenteButton" text="Aggiungi contatto" />
-            <MFXListView fx:id="listaContattoUrgente" layoutX="312.0" layoutY="428.0" onMouseClicked="#testEvent" prefHeight="252.0" prefWidth="144.0" />
-            <MFXToggleButton layoutX="527.0" layoutY="460.0" />
+            <MFXTextField fx:id="emailContattoUrgente" floatMode="BORDER" floatingText="E-mail" layoutX="126.0" layoutY="614.0" prefHeight="52.0" prefWidth="143.0" />
+            <MFXButton fx:id="contattoUrgenteButton" layoutX="217.0" layoutY="713.0" onAction="#onClickUrgenteButton" text="Aggiungi contatto" />
+            <MFXListView fx:id="listaContattoUrgente" layoutX="312.0" layoutY="428.0" onMouseClicked="#testEvent" prefHeight="252.0" prefWidth="308.0" />
+            <MFXButton fx:id="eliminaContattoButton" layoutX="414.0" layoutY="713.0" onAction="#eliminaContatto" text="Elimina contatto" />
+            <Text layoutX="922.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Disponibilità" />
+            <MFXListView fx:id="listaDisponibilita" layoutX="912.0" layoutY="423.0" prefHeight="261.0" prefWidth="304.0" />
+            <MFXDatePicker fx:id="inizioPeriodoDisponibilita" floatMode="BORDER" floatingText="Inizio periodo" layoutX="722.0" layoutY="430.0" prefHeight="48.0" prefWidth="144.0" />
+            <MFXDatePicker fx:id="finePeriodoDisponibilita" floatMode="BORDER" floatingText="Fine periodo" layoutX="720.0" layoutY="497.0" prefHeight="48.0" prefWidth="144.0" />
+            <MFXFilterComboBox fx:id="comuneDisponibilita" floatMode="BORDER" floatingText="Comune" layoutX="721.0" layoutY="565.0" prefHeight="55.0" prefWidth="144.0" />
+            <MFXButton fx:id="eliminaDisponibilitaButton" layoutX="1028.0" layoutY="714.0" onAction="#eliminaDisponibilita" text="Elimina disponibilita" />
+            <MFXButton fx:id="aggiungiDisponibilitaButton" layoutX="807.0" layoutY="715.0" onAction="#aggiungiDisponibilita" text="Aggiungi disponibilita" />
+            <Text layoutX="321.0" layoutY="781.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Esperienze passate" />
+            <MFXTextField fx:id="aziendaEsperienza" floatMode="BORDER" floatingText="Nome azienda" layoutX="125.0" layoutY="789.0" prefHeight="52.0" prefWidth="143.0" />
+            <MFXTextField fx:id="retribuzioneEsperienza" floatMode="BORDER" floatingText="Retribuzione" layoutX="123.0" layoutY="849.0" prefHeight="52.0" prefWidth="143.0" />
+            <MFXDatePicker fx:id="inizioPeriodoEsperienza" floatMode="BORDER" floatingText="Inizio periodo" layoutX="119.0" layoutY="910.0" prefHeight="48.0" prefWidth="148.0" />
+            <MFXDatePicker fx:id="finePeriodoEsperienza" floatMode="BORDER" floatingText="Fine periodo" layoutX="121.0" layoutY="966.0" prefHeight="48.0" prefWidth="144.0" />
+            <MFXFilterComboBox fx:id="comuneEsperienza" floatMode="BORDER" floatingText="Comune" layoutX="120.0" layoutY="1026.0" prefHeight="55.0" prefWidth="144.0" />
+            <MFXListView fx:id="listaEsperienze" layoutX="309.0" layoutY="797.0" prefHeight="275.0" prefWidth="324.0" />
+            <MFXButton fx:id="aggiungiEsperienzaButton" layoutX="208.0" layoutY="1097.0" onAction="#aggiungiEsperienza" text="Aggiungi esperienza" />
+            <MFXButton fx:id="eliminaEsperienzaButton" layoutX="402.0" layoutY="1097.0" onAction="#eliminaEsperienza" text="Elimina esperienza" />
          </children>
       </AnchorPane>
    </content>
