--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<MFXScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="2056.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.InserisciLavoratoriController">
+<MFXScrollPane fx:id="scrollPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="2056.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.InserisciLavoratoriController">
    <content>
       <AnchorPane prefHeight="2049.0" prefWidth="1266.0">
          <children>
@@ -54,7 +54,7 @@
                   </VBox>
                   <VBox layoutX="25.0" layoutY="272.0" prefHeight="77.0" prefWidth="359.0">
                      <children>
-                        <MFXFilterComboBox fx:id="comuneAbitazioneLavoratore" floatMode="BORDER" floatingText="Comune nascita" prefHeight="49.0" prefWidth="442.0" />
+                        <MFXFilterComboBox fx:id="comuneAbitazioneLavoratore" floatMode="BORDER" floatingText="Comune abitazione" prefHeight="49.0" prefWidth="442.0" />
                         <Label fx:id="comuneAbitazioneLavoratoreError" prefHeight="26.0" prefWidth="378.0" text="OK" visible="false" />
                      </children>
                   </VBox>
