Fix aggiunta esperienze Applicazione stile al login

--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/css/style.css
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/css/style.css
@@ -16,4 +16,9 @@
 
 .mfx-text-field{
     -fx-border-color: -fx-active-1;
+    -fx-background-color: -fx-background-1;
+}
+
+.mfx-text-field .floating-text{
+    -fx-font-style: -fx-active-1;
 }
