--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
@@ -26,36 +26,42 @@
             <MFXButton fx:id="aggiungiDisponibilita" layoutX="463.0" layoutY="1357.0" onAction="#onClickAggiungiDisponibilita" text="Aggiungi disponibilita" />
             <MFXButton fx:id="aggiungiEsperienza" layoutX="467.0" layoutY="1941.0" onAction="#onClickAggiungiEsperienza" text="Aggiungi esperienza" />
             <MFXButton fx:id="eliminaEsperienza" layoutX="780.0" layoutY="1941.0" onAction="#onClickEliminaEsperienza" text="Elimina esperienza" />
-            <VBox layoutX="74.0" layoutY="111.0" prefHeight="374.0" prefWidth="389.0">
+            <VBox layoutX="106.0" layoutY="80.0" prefHeight="420.0" prefWidth="551.0">
                <children>
                   <VBox prefHeight="77.0" prefWidth="359.0">
                      <children>
-                        <MFXTextField fx:id="nomeLavoratore" floatMode="BORDER" floatingText="Nome" prefHeight="58.0" prefWidth="359.0" />
+                        <MFXTextField fx:id="nomeLavoratore" floatMode="BORDER" floatingText="Nome" prefHeight="47.0" prefWidth="541.0" />
                         <Label fx:id="nomeLavoratoreError" prefHeight="33.0" prefWidth="384.0" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="10.0" prefHeight="77.0" prefWidth="359.0">
                      <children>
-                        <MFXTextField fx:id="cognomeLavoratore" floatMode="BORDER" floatingText="Cognome" prefHeight="62.0" prefWidth="359.0" />
+                        <MFXTextField fx:id="cognomeLavoratore" floatMode="BORDER" floatingText="Cognome" prefHeight="46.0" prefWidth="570.0" />
                         <Label fx:id="cognomeLavoratoreError" prefHeight="38.0" prefWidth="382.0" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="86.0" prefHeight="77.0" prefWidth="359.0">
                      <children>
-                        <MFXDatePicker fx:id="dataNascitaLavoratore" floatMode="BORDER" floatingText="Data nascita" prefHeight="57.0" prefWidth="359.0" />
+                        <MFXDatePicker fx:id="dataNascitaLavoratore" floatMode="BORDER" floatingText="Data nascita" prefHeight="46.0" prefWidth="570.0" />
                         <Label fx:id="dataNascitaLavoratoreError" prefHeight="35.0" prefWidth="380.0" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="152.0" prefHeight="77.0" prefWidth="359.0">
                      <children>
-                        <MFXFilterComboBox fx:id="comuneNascitaLavoratore" floatMode="BORDER" floatingText="Comune nascita" prefHeight="49.0" prefWidth="442.0" />
+                        <MFXFilterComboBox fx:id="comuneNascitaLavoratore" floatMode="BORDER" floatingText="Comune nascita" prefHeight="46.0" prefWidth="557.0" />
                         <Label fx:id="comuneNascitaLavoratoreError" prefHeight="26.0" prefWidth="378.0" text="OK" visible="false" />
                      </children>
                   </VBox>
                   <VBox layoutX="25.0" layoutY="272.0" prefHeight="77.0" prefWidth="359.0">
                      <children>
-                        <MFXFilterComboBox fx:id="comuneAbitazioneLavoratore" floatMode="BORDER" floatingText="Comune abitazione" prefHeight="49.0" prefWidth="442.0" />
+                        <MFXFilterComboBox fx:id="comuneAbitazioneLavoratore" floatMode="BORDER" floatingText="Comune abitazione" prefHeight="46.0" prefWidth="581.0" />
                         <Label fx:id="comuneAbitazioneLavoratoreError" prefHeight="26.0" prefWidth="378.0" text="OK" visible="false" />
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="85.0" prefWidth="215.0">
+                     <children>
+                        <MFXFilterComboBox fx:id="nazionalitaLavoratore" floatMode="BORDER" floatingText="Nazionalità" prefHeight="46.0" prefWidth="581.0" />
+                        <Label fx:id="nazionalitaLavoratoreError" prefHeight="33.0" prefWidth="223.0" text="OK" visible="false" />
                      </children>
                   </VBox>
                </children>
@@ -65,12 +71,6 @@
             </VBox>
             <VBox layoutX="826.0" layoutY="111.0" prefHeight="275.0" prefWidth="286.0">
                <children>
-                  <VBox prefHeight="79.0" prefWidth="256.0">
-                     <children>
-                        <MFXTextField fx:id="indirizzoLavoratore" floatMode="BORDER" floatingText="Indirizzo" prefHeight="52.0" prefWidth="296.0" />
-                        <Label fx:id="indirizzoLavoratoreError" prefHeight="27.0" prefWidth="265.0" text="OK" visible="false" />
-                     </children>
-                  </VBox>
                   <VBox layoutX="10.0" layoutY="10.0" prefHeight="80.0" prefWidth="256.0">
                      <children>
                         <MFXTextField fx:id="telefonoLavoratore" floatMode="BORDER" floatingText="Telefono" prefHeight="52.0" prefWidth="279.0" />
@@ -186,7 +186,7 @@
             </VBox>
             <Label layoutX="872.0" layoutY="498.0" text="Contatti urgenti" />
             <Label layoutX="654.0" layoutY="987.0" text="Disponibilità" />
-            <Label layoutX="359.0" layoutY="80.0" text="Anagrafica" />
+            <Label layoutX="359.0" layoutY="29.0" text="Anagrafica" />
             <HBox layoutX="387.0" layoutY="664.0" prefHeight="28.0" prefWidth="114.0">
                <children>
                   <MFXCheckbox fx:id="automunito" prefHeight="46.0" prefWidth="28.0" textAlignment="CENTER" />
@@ -196,12 +196,6 @@
             <Label layoutX="631.0" layoutY="1447.0" text="Esperienze passate" />
             <Label layoutX="943.0" layoutY="80.0" text="Contatti" />
             <Label layoutX="194.0" layoutY="506.0" text="Informazioni generali" />
-            <VBox layoutX="465.0" layoutY="111.0" prefHeight="378.0" prefWidth="215.0">
-               <children>
-                  <MFXCheckListView fx:id="nazionalitaLavoratore" prefHeight="348.0" prefWidth="213.0" />
-                  <Label fx:id="nazionalitaLavoratoreError" prefHeight="33.0" prefWidth="223.0" text="OK" visible="false" />
-               </children>
-            </VBox>
             <VBox layoutX="232.0" layoutY="544.0" prefHeight="310.0" prefWidth="144.0">
                <children>
                   <MFXCheckListView fx:id="patentiLavoratore" prefHeight="271.0" prefWidth="142.0" />
