--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/inserisciLavoratoriView.fxml
@@ -15,9 +15,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<MFXScrollPane fx:id="scrollPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="2628.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.InserisciLavoratoriController">
+<MFXScrollPane fx:id="scrollPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="2628.0" prefWidth="1280.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.InserisciLavoratoriController">
    <content>
-      <AnchorPane prefHeight="2605.0" prefWidth="1275.0">
+      <AnchorPane prefHeight="2605.0" prefWidth="1264.0">
          <children>
             <MFXButton fx:id="ritornaMenu" layoutX="45.0" layoutY="25.0" onAction="#onClickRitornaMenu" text="Indietro" wrapText="true" />
             <MFXButton fx:id="inviaLavoratore" layoutX="655.0" layoutY="2532.0" onAction="#onClickInviaLavoratore" text="Invia">
@@ -199,7 +199,7 @@
                <font>
                   <Font size="20.0" />
                </font></Label>
-            <Label layoutX="602.0" layoutY="109.0" text="Anagrafica">
+            <Label layoutX="601.0" layoutY="87.0" text="Anagrafica">
                <font>
                   <Font size="20.0" />
                </font></Label>
