--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/menuView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/menuView.fxml
@@ -2,12 +2,25 @@
 
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.MenuController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.MenuController">
    <children>
-      <MFXButton fx:id="esciButton" layoutX="31.0" layoutY="24.0" onAction="#exitEvent" prefHeight="49.0" prefWidth="71.0" text="Esci" />
-      <MFXButton fx:id="inserisciLavoratoreButton" layoutX="187.0" layoutY="264.0" onAction="#goToInserisciLavoratore" prefHeight="192.0" prefWidth="191.0" text="Inserisci lavoratore" textAlignment="CENTER" wrapText="true" />
-      <MFXButton fx:id="modificaLavoratoreButton" layoutX="545.0" layoutY="264.0" onAction="#goToMenuModificaLavoratore" prefHeight="192.0" prefWidth="191.0" text="Modifica lavoratore" textAlignment="CENTER" wrapText="true" />
-      <MFXButton fx:id="effettuaRicercaButton" layoutX="896.0" layoutY="264.0" onAction="#goToEffettuaRicerca" prefHeight="192.0" prefWidth="191.0" text="Effettua ricerca" textAlignment="CENTER" wrapText="true" />
+      <MFXButton fx:id="esciButton" layoutX="31.0" layoutY="24.0" onAction="#exitEvent" prefHeight="49.0" prefWidth="71.0" text="Esci">
+         <font>
+            <Font size="15.0" />
+         </font></MFXButton>
+      <MFXButton fx:id="inserisciLavoratoreButton" layoutX="187.0" layoutY="264.0" onAction="#goToInserisciLavoratore" prefHeight="192.0" prefWidth="191.0" text="Inserisci lavoratore" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="20.0" />
+         </font></MFXButton>
+      <MFXButton fx:id="modificaLavoratoreButton" layoutX="545.0" layoutY="264.0" onAction="#goToMenuModificaLavoratore" prefHeight="192.0" prefWidth="191.0" text="Modifica lavoratore" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="20.0" />
+         </font></MFXButton>
+      <MFXButton fx:id="effettuaRicercaButton" layoutX="896.0" layoutY="264.0" onAction="#goToEffettuaRicerca" prefHeight="192.0" prefWidth="191.0" text="Effettua ricerca" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="20.0" />
+         </font></MFXButton>
    </children>
 </AnchorPane>
