--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/menuRicercaLavoratoreView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/menuRicercaLavoratoreView.fxml
@@ -4,9 +4,11 @@
 <?import io.github.palexdev.materialfx.controls.MFXCheckListView?>
 <?import io.github.palexdev.materialfx.controls.MFXCheckbox?>
 <?import io.github.palexdev.materialfx.controls.MFXDatePicker?>
+<?import io.github.palexdev.materialfx.controls.MFXFilterComboBox?>
 <?import io.github.palexdev.materialfx.controls.MFXListView?>
 <?import io.github.palexdev.materialfx.controls.MFXRadioButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -14,8 +16,10 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.MenuRicercaLavoratoreController">
    <children>
-      <MFXButton fx:id="ritornaMenu" layoutX="67.0" layoutY="40.0" onAction="#onClickRitornaMenu" text="Indietro" />
-      <MFXListView fx:id="comuneLavoratore" layoutX="266.0" layoutY="140.0" prefHeight="201.0" prefWidth="145.0" />
+      <MFXButton fx:id="ritornaMenu" layoutX="67.0" layoutY="40.0" onAction="#onClickRitornaMenu" text="Indietro">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></MFXButton>
       <MFXDatePicker fx:id="dataNascitaLavoratore" floatMode="BORDER" floatingText="Data nascita" layoutX="472.0" layoutY="413.0" prefHeight="51.0" prefWidth="250.0" />
       <VBox layoutX="67.0" layoutY="140.0" prefHeight="251.0" prefWidth="145.0">
          <children>
@@ -41,7 +45,7 @@
             </HBox>
          </children>
       </VBox>
-      <VBox layoutX="472.0" layoutY="140.0" prefHeight="142.0" prefWidth="250.0">
+      <VBox layoutX="472.0" layoutY="140.0" prefHeight="198.0" prefWidth="250.0">
          <children>
             <MFXDatePicker fx:id="inizioPeriodo" floatMode="BORDER" floatingText="Inizio periodo" prefHeight="51.0" prefWidth="261.0">
                <VBox.margin>
@@ -53,6 +57,7 @@
                   <Insets bottom="15.0" />
                </VBox.margin>
             </MFXDatePicker>
+            <MFXFilterComboBox fx:id="comuneDisponibilita" floatingText="Comune disponibilità" prefHeight="51.0" prefWidth="250.0" />
          </children>
       </VBox>
       <VBox layoutX="266.0" layoutY="413.0" prefHeight="251.0" prefWidth="145.0">
@@ -103,7 +108,7 @@
             </HBox>
          </children>
       </VBox>
-      <HBox alignment="CENTER" layoutX="472.0" layoutY="282.0" prefHeight="26.0" prefWidth="250.0">
+      <HBox alignment="CENTER" layoutX="472.0" layoutY="526.0" prefHeight="26.0" prefWidth="250.0">
          <children>
             <MFXCheckbox fx:id="automunito" prefHeight="39.0" prefWidth="28.0" />
             <Label prefHeight="26.0" prefWidth="80.0" text="Automunito" />
@@ -128,9 +133,19 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </HBox>
-      <MFXButton fx:id="ricercaAND" alignment="CENTER" layoutX="472.0" layoutY="535.0" onAction="#onClickRicercaAND" prefHeight="68.0" prefWidth="100.0" text="RIcerca per AND" textAlignment="CENTER" wrapText="true" />
-      <MFXButton fx:id="ricercaOR" alignment="CENTER" layoutX="622.0" layoutY="535.0" onAction="#onClickRicercaOR" prefHeight="68.0" prefWidth="100.0" text="Ricerca per OR" textAlignment="CENTER" wrapText="true" />
+      <MFXButton fx:id="ricercaAND" alignment="CENTER" layoutX="472.0" layoutY="575.0" onAction="#onClickRicercaAND" prefHeight="68.0" prefWidth="100.0" text="RIcerca per AND" textAlignment="CENTER" wrapText="true">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></MFXButton>
+      <MFXButton fx:id="ricercaOR" alignment="CENTER" layoutX="622.0" layoutY="575.0" onAction="#onClickRicercaOR" prefHeight="68.0" prefWidth="100.0" text="Ricerca per OR" textAlignment="CENTER" wrapText="true">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></MFXButton>
       <MFXListView fx:id="listaLavoratori" layoutX="785.0" layoutY="140.0" prefHeight="469.0" prefWidth="426.0" />
-      <MFXButton fx:id="visualizzaDettagli" layoutX="935.0" layoutY="636.0" onAction="#onClickVisualizzaDettagli" prefHeight="41.0" prefWidth="145.0" text="Visualizza dettagli" textAlignment="CENTER" wrapText="true" />
+      <MFXButton fx:id="visualizzaDettagli" layoutX="935.0" layoutY="636.0" onAction="#onClickVisualizzaDettagli" prefHeight="41.0" prefWidth="145.0" text="Visualizza dettagli" textAlignment="CENTER" wrapText="true">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></MFXButton>
+      <MFXCheckListView fx:id="comuneLavoratore" layoutX="266.0" layoutY="140.0" prefHeight="200.0" prefWidth="145.0" />
    </children>
 </AnchorPane>
