--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/modificaLavoratoreView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/modificaLavoratoreView.fxml
@@ -9,27 +9,52 @@
 <?import io.github.palexdev.materialfx.controls.MFXScrollPane?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.text.Font?>
+
 <MFXScrollPane fx:id="scrollPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="2628.0" prefWidth="1280.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.ModificaLavoratoreController">
    <content>
       <AnchorPane prefHeight="2605.0" prefWidth="1264.0">
          <children>
-            <MFXButton fx:id="ritornaMenu" layoutX="45.0" layoutY="25.0" onAction="#onClickRitornaMenu" text="Indietro" wrapText="true" />
+            <MFXButton fx:id="ritornaMenu" layoutX="45.0" layoutY="25.0" onAction="#onClickRitornaMenu" text="Indietro" wrapText="true">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></MFXButton>
             <MFXButton fx:id="modificaLavoratore" layoutX="655.0" layoutY="2532.0" onAction="#onClickModificaLavoratore" text="Modifica">
                <font>
                   <Font size="20.0" />
-               </font></MFXButton>
-            <MFXButton fx:id="aggiungiContatto" layoutX="476.0" layoutY="1390.0" onAction="#onClickAggiungiContatto" text="Aggiungi contatto" />
-            <MFXButton fx:id="eliminaContatto" layoutX="758.0" layoutY="1390.0" onAction="#onClickEliminaContatto" text="Elimina contatto" />
-            <MFXButton fx:id="eliminaDisponibilita" layoutX="746.0" layoutY="1865.0" onAction="#onClickEliminaDisponibilita" text="Elimina disponibilita" />
-            <MFXButton fx:id="aggiungiDisponibilita" layoutX="464.0" layoutY="1865.0" onAction="#onClickAggiungiDisponibilita" text="Aggiungi disponibilita" />
-            <MFXButton fx:id="aggiungiEsperienza" layoutX="468.0" layoutY="2471.0" onAction="#onClickAggiungiEsperienza" text="Aggiungi esperienza" />
-            <MFXButton fx:id="eliminaEsperienza" layoutX="755.0" layoutY="2471.0" onAction="#onClickEliminaEsperienza" text="Elimina esperienza" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></MFXButton>
+            <MFXButton fx:id="aggiungiContatto" layoutX="476.0" layoutY="1390.0" onAction="#onClickAggiungiContatto" text="Aggiungi contatto">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></MFXButton>
+            <MFXButton fx:id="eliminaContatto" layoutX="758.0" layoutY="1390.0" onAction="#onClickEliminaContatto" text="Elimina contatto">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></MFXButton>
+            <MFXButton fx:id="eliminaDisponibilita" layoutX="746.0" layoutY="1865.0" onAction="#onClickEliminaDisponibilita" text="Elimina disponibilita">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></MFXButton>
+            <MFXButton fx:id="aggiungiDisponibilita" layoutX="464.0" layoutY="1865.0" onAction="#onClickAggiungiDisponibilita" text="Aggiungi disponibilita">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></MFXButton>
+            <MFXButton fx:id="aggiungiEsperienza" layoutX="468.0" layoutY="2471.0" onAction="#onClickAggiungiEsperienza" text="Aggiungi esperienza">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></MFXButton>
+            <MFXButton fx:id="eliminaEsperienza" layoutX="755.0" layoutY="2471.0" onAction="#onClickEliminaEsperienza" text="Elimina esperienza">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></MFXButton>
             <VBox layoutX="365.0" layoutY="147.0" prefHeight="420.0" prefWidth="562.0">
                <children>
                   <VBox prefHeight="77.0" prefWidth="359.0">
