--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/menuModificaLavoratoreView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/menuModificaLavoratoreView.fxml
@@ -4,7 +4,12 @@
 <?import io.github.palexdev.materialfx.controls.MFXListView?>
 <?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.MenuModificaLavoratoreController">
    <children>
@@ -12,20 +17,32 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></MFXButton>
-      <MFXTextField fx:id="nome" floatMode="BORDER" floatingText="Nome" layoutX="307.0" layoutY="100.0" prefHeight="51.0" prefWidth="270.0" />
-      <MFXTextField fx:id="cognome" floatMode="BORDER" floatingText="Cognome" layoutX="698.0" layoutY="100.0" prefHeight="51.0" prefWidth="270.0" />
-      <MFXButton fx:id="cercaLavoratore" layoutX="614.0" layoutY="183.0" onAction="#onClickCercaLavoratore" text="Cerca">
+      <MFXTextField fx:id="nome" floatMode="BORDER" floatingText="Nome" layoutX="374.0" layoutY="126.0" prefHeight="51.0" prefWidth="206.0" />
+      <MFXTextField fx:id="cognome" floatMode="BORDER" floatingText="Cognome" layoutX="696.0" layoutY="126.0" prefHeight="51.0" prefWidth="206.0" />
+      <MFXButton fx:id="cercaLavoratore" layoutX="614.0" layoutY="192.0" onAction="#onClickCercaLavoratore" text="Cerca">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></MFXButton>
       <MFXListView fx:id="listaLavoratori" layoutX="308.0" layoutY="235.0" prefHeight="350.0" prefWidth="665.0" />
-      <MFXButton fx:id="modificaLavoratore" layoutX="407.0" layoutY="609.0" onAction="#onClickModificaLavoratore" text="Modifica">
+      <MFXButton fx:id="modificaLavoratore" layoutX="442.0" layoutY="609.0" onAction="#onClickModificaLavoratore" text="Modifica">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></MFXButton>
-      <MFXButton fx:id="eliminaLavoratore" layoutX="799.0" layoutY="609.0" onAction="#onClickEliminaLavoratore" text="Cancella">
+      <MFXButton fx:id="eliminaLavoratore" layoutX="765.0" layoutY="609.0" onAction="#onClickEliminaLavoratore" text="Cancella">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></MFXButton>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffc107" height="115.0" layoutX="915.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" width="250.0" />
+      <Label alignment="CENTER" layoutX="915.0" layoutY="1.0" prefHeight="115.0" prefWidth="250.0" text="Lavoratori Stagionali" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </Label>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffa000" height="115.0" layoutX="1165.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);;" width="115.0" />
+      <ImageView fitHeight="95.0" fitWidth="92.0" layoutX="1177.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../img/icon.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
