--- a/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/loginView.fxml
+++ b/progetto/LavoratoriStagionali/src/main/resources/it/univr/lavoratoristagionali/controller/fxml/loginView.fxml
@@ -12,18 +12,22 @@
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.univr.lavoratoristagionali.controller.LoginController">
-   <Label fx:id="loginTitleLabel" layoutX="606.0" layoutY="189.0" prefHeight="50.0" prefWidth="68.0" text="Login" textAlignment="CENTER">
+   <MFXTextField fx:id="usernameField" floatMode="BORDER" floatingText="Username" layoutX="521.0" layoutY="264.0" prefHeight="50.0" prefWidth="239.0" />
+   <MFXPasswordField fx:id="passwordField" floatMode="BORDER" floatingText="Password" layoutX="520.0" layoutY="344.0" prefHeight="50.0" prefWidth="239.0" />
+   <MFXButton fx:id="submitButton" layoutX="597.0" layoutY="426.0" onAction="#loginEvent" prefHeight="50.0" prefWidth="85.0" rippleAnimateShadow="true" text="Invio" textAlignment="CENTER">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+      <font>
+         <Font size="17.0" />
+      </font></MFXButton>
+   <Label fx:id="errorLabel" layoutX="524.0" layoutY="493.0" prefHeight="50.0" prefWidth="239.0" text="Credenziali non corrette" textAlignment="CENTER" textFill="#cd2424" visible="false" wrapText="true" />
+   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffecb3" height="115.0" layoutX="665.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" width="250.0" />
+   <Label fx:id="loginTitleLabel" layoutX="756.0" layoutY="33.0" prefHeight="50.0" prefWidth="68.0" text="Login" textAlignment="CENTER">
       <font>
          <Font size="25.0" />
       </font>
    </Label>
-   <MFXTextField fx:id="usernameField" floatMode="BORDER" floatingText="Username" layoutX="521.0" layoutY="264.0" prefHeight="50.0" prefWidth="239.0" />
-   <MFXPasswordField fx:id="passwordField" floatMode="BORDER" floatingText="Password" layoutX="520.0" layoutY="344.0" prefHeight="50.0" prefWidth="239.0" />
-   <MFXButton fx:id="submitButton" layoutX="614.0" layoutY="426.0" onAction="#loginEvent" prefHeight="50.0" prefWidth="68.0" rippleAnimateShadow="true" text="Invio" textAlignment="CENTER">
-      <cursor>
-         <Cursor fx:constant="HAND" />
-      </cursor></MFXButton>
-   <Label fx:id="errorLabel" layoutX="524.0" layoutY="493.0" prefHeight="50.0" prefWidth="239.0" text="Credenziali non corrette" textAlignment="CENTER" textFill="#cd2424" visible="false" wrapText="true" />
    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffc107" height="115.0" layoutX="915.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" width="250.0" />
    <Label alignment="CENTER" layoutX="915.0" layoutY="1.0" prefHeight="115.0" prefWidth="250.0" text="Lavoratori Stagionali" textAlignment="CENTER" wrapText="true">
       <font>
